--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
 
   # Install node packages
-  - name: 'grc.io/cloud-builders/npm'
+  - name: 'gcr.io/cloud-builders/npm'
     args: [ 'install' ]
 
   # Build productive files
-  - name: 'grc.io/cloud-builders/npm'
+  - name: 'gcr.io/cloud-builders/npm'
     args: [ 'run', 'build', '--prod' ]
 
   # Deploy to google cloud app engine
